# src/main/java/com/example/demo/post/dto/CreatePostResponse.java
@@ -1,0 +1,8 @@
+package com.example.demo.post.dto;
+
+import lombok.Data;
+
+@Data
+public class CreatePostResponse {
+    private Long postId;
+}
